[tool.poetry]
name = "databricks-sql-cli"
version = "0.3.3"
description = "A DBCLI client for Databricks SQL"
authors = ["Databricks SQL CLI Maintainers <dbsqlcli-maintainers@databricks.com>"]
packages = [{include = "dbsqlcli"}]
readme = "README.md"
license = "proprietary"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Pygments = "^2.11.2"
prompt-toolkit = "^3.0.29"
sqlparse = "^0.4.2"
configobj = "^5.0.6"
cli-helpers = "^2.2.1"
databricks-sql-connector = ">=3.0.0"
click = "^8.1.2"
pandas = [
    { version = ">=1.2.5,<2.2.0", python = ">=3.8" }
]
numpy = [
    { version = ">=1.16.6", python = ">=3.8,<3.11" },
    { version = ">=1.23.4", python = ">=3.11" },
]

[tool.poetry.scripts]
dbsqlcli = "dbsqlcli.main:cli"
databricks-sql-cli = "dbsqlcli.main:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
